# PCMFG

./: .env.example  .gitignore  CLAUDE.md  README.md  REIMPLEMENTATION_PLAN.md  RUNNER_README.md  main.py  pcmfg_config.example.yaml  pcmfg_config.yaml  pyproject.toml  run_all_stories.py
.claude/agents/: extractor_agent.txt  overview_agent.txt  project_instruction.txt
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: REPORT.md
pcmfg/: __init__.py  analyzer.py  checkpoint.py  cli.py  config.py
pcmfg/analysis/: __init__.py  clusterer.py  dtw_clusterer.py  feature_extractor.py  normalizer.py  plotter.py
pcmfg/interesting/: __init__.py  converter.py  detector.py  discord.py  gap.py  motif.py  plotter.py  segmentation.py
pcmfg/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
pcmfg/models/: __init__.py  schemas.py
pcmfg/phase1/: __init__.py  emotion_extractor.py  world_builder.py
pcmfg/phase2/: __init__.py  normalizer.py
pcmfg/phase3/: __init__.py  axis_mapper.py  synthesizer.py
pcmfg/utils/: __init__.py  novel_loader.py  parallel.py  text_processing.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_checkpoint.py  test_dtw_clusterer.py  test_interesting.py  test_normalizer.py  test_overlay_plotter.py  test_phase1.py  test_phase2.py  test_phase3.py  test_synthesizer.py  test_text_processing.py
(+14 files in other folders)
